# keeper

./: .gitignore  .taurignore  AD_HOC_TASKS.md  AGENTS.md  BUGS.md  CLAUDE.md  EXPO_OTA.md  GEMINI.md  How pdf attachment works.md  README.md  ROADMAP.md  TODO.md  app.config.js  app.json  babel.config.js  biome.jsonc  eas.json  jest.config.js  jest.setup.ts  knip.json  metro.config.js  package-lock.json  package.json  vitest.config.ts  wdyr.ts
.claude/: settings.json  settings.local.json
.grove/: .gitignore  backend.json  config.json  workspace.json
.qwen/: settings.json
.serena/: project.yml
android/: gradle.properties
app/: +html.tsx  _layout.tsx  editor.tsx  index.tsx
components/: ErrorScreen.tsx  IconCard.tsx  Loader.tsx  NoteCard.tsx  NoteEditorView.tsx  NoteGrid.tsx  SaveIndicator.tsx  ScrollView.tsx  SearchBar.tsx  Toast.tsx
contexts/: EditorContext.tsx
docs/: PLAN-app-bundle-size.md  PLAN-editor-typing-lag.md  PLAN-selection-as-source-of-truth.md  Setting up mobile testing.md  Startup telemetry.md  cursor-handling-comparative-analysis.md  focused-block-cursor-analysis.md  server-sync-cutover.md  server-sync-moc-plan.md  tab-system.md
hooks/: useAutoSave.ts  useExtendedTheme.ts  useFocusBlock.ts  useLoadNote.ts  useNotes.ts  useOverlayPosition.ts  useStyles.ts  useToolbarActions.ts
migrations/: 001_init.ts  002_add_fts.ts
native/: README.md  TODO.md  package-lock.json  package.json  wdyr.ts
plugins/: withAndroidBundleInputExcludes.js  (+1 more)
server/: Caddyfile  (+2 more)
src-tauri/git_core/: Cargo.toml  README.md  build.rs
src-tauri/git_core/src/: lib.rs
(+746 files in other folders)
