[package]
name = "git_core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
git2 = { version = "0.20", features = ["vendored-openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }

[build-dependencies]
dotenvy = "0.15"
